@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -29,7 +28,7 @@ import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
 import de.tum.in.www1.artemis.repository.ProgrammingExerciseStudentParticipationRepository;
 import de.tum.in.www1.artemis.util.ModelFactory;
 
-public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
+class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
 
     @Autowired
     private ProgrammingExerciseRepository programmingExerciseRepository;
@@ -50,7 +49,7 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
     private StudentParticipation examStudentParticipation;
 
     @BeforeEach
-    public void reset() {
+    void reset() {
         database.addUsers(2, 1, 1, 1);
         Course course = database.addCourseWithOneProgrammingExercise();
         this.programmingExercise = (ProgrammingExercise) course.getExercises().stream().filter(exercise -> exercise instanceof ProgrammingExercise).findAny().orElseThrow();
@@ -62,25 +61,25 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         database.resetDatabase();
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetFeedbacksForResultAsTA() {
+    void testGetFeedbacksForResultAsTA() {
         this.testGetFeedbacksForResultAsCurrentUser();
     }
 
     @Test
     @WithMockUser(username = "editor1", roles = "EDITOR")
-    public void testGetFeedbacksForResultAsEditor() {
+    void testGetFeedbacksForResultAsEditor() {
         this.testGetFeedbacksForResultAsCurrentUser();
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetFeedbacksForResultAsInstructor() {
+    void testGetFeedbacksForResultAsInstructor() {
         this.testGetFeedbacksForResultAsCurrentUser();
     }
 
@@ -93,61 +92,61 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInExamsBeforePublish() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInExamsBeforePublish() {
         Exam exam = examStudentParticipation.getExercise().getExamViaExerciseGroupOrCourseMember();
         exam.setPublishResultsDate(ZonedDateTime.now().plusDays(2));
         examRepository.save(exam);
         Result result = database.addResultToParticipation(null, null, examStudentParticipation);
         result = database.addVariousVisibilityFeedbackToResults(result);
 
-        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible() && !feedback.isAfterDueDate()).collect(Collectors.toList());
+        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible() && !feedback.isAfterDueDate()).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInExamsAfterPublish() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInExamsAfterPublish() {
         Exam exam = examStudentParticipation.getExercise().getExamViaExerciseGroupOrCourseMember();
         exam.setPublishResultsDate(ZonedDateTime.now().minusDays(2));
         examRepository.save(exam);
         Result result = database.addResultToParticipation(null, null, examStudentParticipation);
         result = database.addVariousVisibilityFeedbackToResults(result);
 
-        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).collect(Collectors.toList());
+        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInCourseBeforeDueDate() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInCourseBeforeDueDate() {
         programmingExercise.setDueDate(ZonedDateTime.now().plusDays(2));
         programmingExerciseRepository.save(programmingExercise);
         Result result = database.addResultToParticipation(null, null, programmingExerciseStudentParticipation);
         result = database.addVariousVisibilityFeedbackToResults(result);
 
-        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible() && !feedback.isAfterDueDate()).collect(Collectors.toList());
+        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible() && !feedback.isAfterDueDate()).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInCourseAfterDueDate() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInCourseAfterDueDate() {
         programmingExercise.setDueDate(ZonedDateTime.now().minusDays(2));
         programmingExerciseRepository.save(programmingExercise);
         Result result = database.addResultToParticipation(null, null, programmingExerciseStudentParticipation);
         result = database.addVariousVisibilityFeedbackToResults(result);
 
-        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).collect(Collectors.toList());
+        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInCourseBeforeAssessmentDueDateWithNonAutomaticResult() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInCourseBeforeAssessmentDueDateWithNonAutomaticResult() {
         programmingExercise.setDueDate(ZonedDateTime.now().minusDays(4));
         programmingExercise.setAssessmentDueDate(ZonedDateTime.now().plusDays(2));
         programmingExerciseRepository.save(programmingExercise);
@@ -156,14 +155,14 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
         result = database.addFeedbackToResult(ModelFactory.createPositiveFeedback(FeedbackType.MANUAL), result);
 
         List<Feedback> expectedFeedbacks = result.getFeedbacks().stream()
-                .filter(feedback -> !feedback.isInvisible() && feedback.getType() != null && feedback.getType().equals(FeedbackType.AUTOMATIC)).collect(Collectors.toList());
+                .filter(feedback -> !feedback.isInvisible() && feedback.getType() != null && feedback.getType().equals(FeedbackType.AUTOMATIC)).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInCourseAfterAssessmentDueDateWithNonAutomaticResult() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInCourseAfterAssessmentDueDateWithNonAutomaticResult() {
         programmingExercise.setDueDate(ZonedDateTime.now().minusDays(4));
         programmingExercise.setAssessmentDueDate(ZonedDateTime.now().minusDays(2));
         programmingExerciseRepository.save(programmingExercise);
@@ -171,14 +170,14 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
         result = database.addVariousVisibilityFeedbackToResults(result);
         result = database.addFeedbackToResult(ModelFactory.createPositiveFeedback(FeedbackType.MANUAL), result);
 
-        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).collect(Collectors.toList());
+        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudent_shouldFilterInCourseAfterAssessmentDueDateWithAutomaticResult() {
+    void testGetFeedbacksForResultAsStudent_shouldFilterInCourseAfterAssessmentDueDateWithAutomaticResult() {
         programmingExercise.setDueDate(ZonedDateTime.now().minusDays(4));
         programmingExercise.setAssessmentDueDate(ZonedDateTime.now().minusDays(2));
         programmingExerciseRepository.save(programmingExercise);
@@ -186,7 +185,7 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
         result = database.addVariousVisibilityFeedbackToResults(result);
         result = database.addFeedbackToResult(ModelFactory.createPositiveFeedback(FeedbackType.MANUAL), result);
 
-        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).collect(Collectors.toList());
+        List<Feedback> expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).toList();
 
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
@@ -194,7 +193,7 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
     @ParameterizedTest(name = "{displayName} [{index}] {argumentsWithNames}")
     @EnumSource(AssessmentType.class)
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudentShouldOnlyFilterAutomaticResultBeforeLastDueDate(AssessmentType assessmentType) {
+    void testGetFeedbacksForResultAsStudentShouldOnlyFilterAutomaticResultBeforeLastDueDate(AssessmentType assessmentType) {
         programmingExercise.setDueDate(ZonedDateTime.now().minusHours(2));
         programmingExercise.setAssessmentDueDate(null);
         programmingExercise = programmingExerciseRepository.save(programmingExercise);
@@ -209,11 +208,11 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
 
         List<Feedback> expectedFeedbacks;
         if (AssessmentType.AUTOMATIC == assessmentType) {
-            expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible() && !feedback.isAfterDueDate()).collect(Collectors.toList());
+            expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible() && !feedback.isAfterDueDate()).toList();
             assertThat(expectedFeedbacks).hasSize(2);
         }
         else {
-            expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).collect(Collectors.toList());
+            expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).toList();
             assertThat(expectedFeedbacks).hasSize(3);
         }
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
@@ -222,7 +221,7 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
     @ParameterizedTest(name = "{displayName} [{index}] {argumentsWithNames}")
     @EnumSource(AssessmentType.class)
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetFeedbacksForResultAsStudentShouldNotFilterAfterLatestDueDate(AssessmentType assessmentType) {
+    void testGetFeedbacksForResultAsStudentShouldNotFilterAfterLatestDueDate(AssessmentType assessmentType) {
         programmingExercise.setDueDate(ZonedDateTime.now().minusHours(2));
         programmingExercise.setAssessmentDueDate(null);
         programmingExercise = programmingExerciseRepository.save(programmingExercise);
@@ -236,7 +235,7 @@ public class ResultServiceTest extends AbstractSpringIntegrationBambooBitbucketJ
         result = database.addFeedbackToResult(ModelFactory.createPositiveFeedback(FeedbackType.MANUAL), result);
 
         List<Feedback> expectedFeedbacks;
-        expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).collect(Collectors.toList());
+        expectedFeedbacks = result.getFeedbacks().stream().filter(feedback -> !feedback.isInvisible()).toList();
         assertThat(expectedFeedbacks).hasSize(3);
         assertThat(resultService.getFeedbacksForResult(result)).isEqualTo(expectedFeedbacks);
     }
